applications/postifyhq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postifyhq-web
  namespace: postifyhq
  labels:
    app.kubernetes.io/name: postifyhq
    app.kubernetes.io/part-of: workhour-platform
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kubectl
    environment: development
    team: platform-engineering
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: postifyhq
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postifyhq
        app.kubernetes.io/part-of: workhour-platform
        app.kubernetes.io/component: web
        environment: development
        team: platform-engineering
    spec:
      imagePullSecrets:
        - name: dockerhub-pull-secret
      containers:
        - name: postifyhq-web
          image: topeshittu/postifyhq:build-4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 5
          
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
